# EventX

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  README_en.md  README_fr.md  compile.bat  compile.sh  convention.md  todo.md
assets/macos/: EventX.icns  Info.plist
assets/windows/: ressources.rc
include/: Event.hpp  FonctionsDemarrage.hpp  FonctionsJson.hpp  GestionEvenement.hpp  GestionManager.hpp  GestionParticipant.hpp  GestionStand.hpp  MainWindow.hpp  Manager.hpp  Participant.hpp  Stand.hpp  ViewData.hpp
qt5/lib/: libQt5AccessibilitySupport.la  libQt5AccessibilitySupport.prl  libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5ClipboardSupport.la  libQt5ClipboardSupport.prl  libQt5DeviceDiscoverySupport.la  libQt5DeviceDiscoverySupport.prl  libQt5EdidSupport.la  libQt5EdidSupport.prl  libQt5EventDispatcherSupport.la  libQt5EventDispatcherSupport.prl  libQt5FbSupport.la  libQt5FbSupport.prl  libQt5FontDatabaseSupport.la  libQt5FontDatabaseSupport.prl  libQt5GraphicsSupport.la  libQt5GraphicsSupport.prl  libQt5OpenGLExtensions.la  libQt5OpenGLExtensions.prl  libQt5PacketProtocol.la  libQt5PacketProtocol.prl  libQt5PlatformCompositorSupport.la  libQt5PlatformCompositorSupport.prl  libQt5QmlDebug.la  libQt5QmlDebug.prl  libQt5QmlDevTools.la  libQt5QmlDevTools.prl  libQt5ServiceSupport.la  libQt5ServiceSupport.prl  libQt5ThemeSupport.la  libQt5ThemeSupport.prl  libQt5UiTools.la  libQt5UiTools.prl  libQtRepParser.prl  libQtUiPlugin.prl  libqtfreetype.prl  libqtlibpng.prl
qt5/mkspecs/: qconfig.pri  qmodule.pri
qt6mac/lib/: libQt6Coap.prl  libQt6Concurrent.prl  libQt6Core.prl  libQt6Core5Compat.prl  libQt6DBus.prl  libQt6DeviceDiscoverySupport.prl  libQt6ExampleIcons.prl  libQt6FbSupport.prl  libQt6Grpc.prl  libQt6Gui.prl  libQt6HttpServer.prl  libQt6JsonRpc.prl  libQt6LanguageServer.prl  libQt6Network.prl  libQt6OpenGL.prl  libQt6OpenGLWidgets.prl  libQt6Positioning.prl  libQt6PrintSupport.prl  libQt6Protobuf.prl  libQt6ShaderTools.prl  libQt6Sql.prl  libQt6Test.prl  libQt6Widgets.prl  libQt6Xml.prl
qt6mac/libexec/: cmake_automoc_parser  moc  qt-cmake-private  qt-cmake-private-install.cmake  qt-internal-configure-tests  syncqt  tracegen  tracepointgen
qt6mac/metatypes/: qt6coap_release_metatypes.json  qt6grpc_release_metatypes.json  qt6gui_release_metatypes.json  qt6positioning_release_metatypes.json  qt6widgets_release_metatypes.json
qt6mac/mkspecs/: qconfig.pri  qmodule.pri
qt6mac/modules/: Coap.json  Concurrent.json  Core.json  Core5Compat.json  DBus.json  DeviceDiscoverySupportPrivate.json  ExampleIconsPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Grpc.json  Gui.json  HarfbuzzPrivate.json  HttpServer.json  JpegPrivate.json  JsonRpcPrivate.json  LanguageServerPrivate.json  Network.json  OpenGL.json  OpenGLWidgets.json  PngPrivate.json  Positioning.json  PrintSupport.json  Protobuf.json  ShaderTools.json  Sql.json  Test.json  Widgets.json  Xml.json
qt6win/lib/: Qt6BundledFreetype.lib  Qt6BundledGlslang_Oglcompiler.lib  Qt6BundledGlslang_Osdependent.lib  Qt6BundledGlslang_Spirv.lib  Qt6BundledLibjpeg.lib  Qt6BundledLibjpeg12bits.lib  Qt6BundledLibjpeg16bits.lib  Qt6BundledLibpng.lib  Qt6BundledPcre2.lib  Qt6BundledZLIB.lib  Qt6Bundled_Clip2Tri.lib  Qt6Bundled_Clipper.lib  Qt6Bundled_Poly2Tri.lib  Qt6Coap.lib  Qt6Coap.prl  Qt6Concurrent.lib  Qt6Concurrent.prl  Qt6Core.prl  Qt6Core5Compat.lib  Qt6Core5Compat.prl  Qt6DBus.prl  Qt6DeviceDiscoverySupport.lib  Qt6DeviceDiscoverySupport.prl  Qt6EntryPoint.lib  Qt6EntryPoint.prl  Qt6ExampleIcons.lib  Qt6ExampleIcons.prl  Qt6FbSupport.lib  Qt6FbSupport.prl  Qt6Grpc.lib  Qt6Grpc.prl  Qt6Gui.prl  Qt6HttpServer.lib  Qt6HttpServer.prl  Qt6JsonRpc.lib  Qt6JsonRpc.prl  Qt6LanguageServer.prl  Qt6Network.prl  Qt6OpenGL.lib  Qt6OpenGL.prl  (+16 more)
qt6win/metatypes/: qt6core_release_metatypes.json  qt6dbus_release_metatypes.json  qt6gui_release_metatypes.json  qt6httpserver_release_metatypes.json  qt6network_release_metatypes.json  qt6printsupport_release_metatypes.json  qt6protobuf_release_metatypes.json  qt6sql_release_metatypes.json  qt6test_release_metatypes.json  qt6widgets_release_metatypes.json
qt6win/mkspecs/: qconfig.pri  qmodule.pri
qt6win/modules/: Coap.json  Concurrent.json  Core.json  Core5Compat.json  DBus.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  (+23 more)
src/: Event.cpp  FonctionsDemarrage.cpp  FonctionsJson.cpp  GestionEvenement.cpp  GestionManager.cpp  GestionParticipant.cpp  GestionStand.cpp  MainWindow.cpp  Manager.cpp  Participant.cpp  Stand.cpp  ViewData.cpp  main.cpp
(+3573 files in other folders)
